--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -10,3 +10,16 @@ html {
 *::before {
   box-sizing: inherit;
 }
+body {
+  display: grid;
+  grid-template-areas:
+    "header"
+    "navigation"
+    "main"
+    "footer";
+  .App {
+    .Entete {
+      grid-area: header;
+    }
+  }
+}
