--- a/src/sass/layout/_layoutTablette.scss
+++ b/src/sass/layout/_layoutTablette.scss
@@ -1,25 +1,10 @@
 @media screen and (min-width: 768px) {
   .App {
-    display: grid;
+    grid-template-columns: auto 80% auto;
     grid-template-areas:
       "header header header"
-      "sidebar navigation sidebar"
-      "sidebar main sidebar"
+      "navigation navigation navigation"
+      "sidebar main ."
       "footer footer footer";
-  }
-  .Entete {
-    grid-area: header;
-  }
-  .Navigation {
-    grid-area: navigation;
-  }
-  .Main {
-    grid-area: main;
-  }
-  .Footer {
-    grid-area: footer;
-  }
-  .SidebarWave {
-    grid-area: sidebar;
   }
 }
