--- a/src/sass/components/Projet.scss
+++ b/src/sass/components/Projet.scss
@@ -1,5 +1,6 @@
 @import "../variables/colors";
 .Projet {
+  border-radius: 3px;
   background-color: rgba(240, 240, 240, 0.308);
   box-shadow: 0px 0px 10px 2px rgba(121, 121, 121, 0.336);
   width: 400px;
@@ -8,6 +9,7 @@
     $color__background-color-primary 10%,
     transparent 0%
   );
+  transition: 0.5s;
   border: $color__background-color-primary solid 1px;
   img {
     width: 398px;
@@ -31,3 +33,6 @@
     }
   }
 }
+// .Projet:hover {
+//   box-shadow: 0px 0px 10px 2px rgba(121, 121, 121, 1);
+// }
