Ajout de deux nouveaux projets ainsi que l'apparence des technologies utilisées dans chacun des projets

--- a/src/sass/components/Navigation.scss
+++ b/src/sass/components/Navigation.scss
@@ -1,5 +1,5 @@
 @import "../variables/colors";
-.Navigation {
-  border-bottom: 2px solid;
-  border-color: black;
-}
+// .Navigation {
+//   border-bottom: 2px solid;
+//   border-color: black;
+// }
