--- a/src/sass/components/Entete.scss
+++ b/src/sass/components/Entete.scss
@@ -12,4 +12,9 @@
     border: 2px solid $color__background-color-primary;
     box-shadow: 2px 2px 10px black;
   }
+  .contactLinks {
+    width: 100%;
+    height: 3rem;
+    background-color: $color__font-link;
+  }
 }
