--- a/src/sass/components/Projet.scss
+++ b/src/sass/components/Projet.scss
@@ -23,12 +23,14 @@
     .desc {
       font-style: italic;
       height: 3rem;
+      margin: 1rem;
     }
     .liens {
       display: flex;
       justify-content: space-evenly;
     }
     .date {
+      margin: 1rem;
       font-weight: bold;
     }
   }
