Stylisation des technologies présentées

--- a/src/sass/components/Projet.scss
+++ b/src/sass/components/Projet.scss
@@ -25,9 +25,13 @@
       height: 3rem;
       margin: 1rem;
     }
+    .techTitre {
+      margin: 1rem;
+    }
     .liens {
       display: flex;
-      justify-content: space-evenly;
+      margin: 1rem;
+      justify-content: space-between;
     }
     .date {
       margin: 1rem;
