--- a/src/sass/variables/_colors.scss
+++ b/src/sass/variables/_colors.scss
@@ -1,5 +1,7 @@
 //Background Colors
 $color__background-color-primary: #3dd9ad;
+$color__background-color-primary-dark: #28a783;
+$color__background-color-primary-fade: #8fe4cc41;
 $color__backgroung-color-main: rgb(240, 250, 255);
 $color__background-color-link: rgb(54, 54, 54);
 
