--- a/src/sass/components/SidebarWave.scss
+++ b/src/sass/components/SidebarWave.scss
@@ -2,4 +2,17 @@
 
 .SidebarWave {
   background-color: $color__background-color-primary;
+  animation: animationBackground 5s infinite;
+}
+
+@keyframes animationBackground {
+  from {
+    background-color: $color__background-color-primary;
+  }
+  50% {
+    background-color: $color__background-color-primary-dark;
+  }
+  to {
+    background-color: $color__background-color-primary;
+  }
 }
