Completion de la section contact ainsi que quelques changements au layout : navigation dans la barre du haut et ajout de la section de presentation

--- a/src/sass/components/Main.scss
+++ b/src/sass/components/Main.scss
@@ -1,5 +1,12 @@
+@import "../variables/colors";
 .Main {
   display: flex;
   flex-flow: column;
   gap: 2rem;
+  > h2 {
+    padding: 2rem;
+    background-color: $color__background-color-soustitre;
+    text-align: center;
+    color: white;
+  }
 }
