--- a/src/sass/variables/_colors.scss
+++ b/src/sass/variables/_colors.scss
@@ -4,6 +4,7 @@ $color__background-color-primary-dark: #28a783;
 $color__background-color-primary-fade: #8fe4cc41;
 $color__backgroung-color-main: rgb(240, 250, 255);
 $color__background-color-link: rgb(54, 54, 54);
+$color__background-color-soustitre: rgb(71, 71, 71);
 
 //Colors Typo
 $color__font-link-hover: white;
