--- a/src/sass/components/Entete.scss
+++ b/src/sass/components/Entete.scss
@@ -1,20 +1,19 @@
 @import "../variables/colors";
 
 .Entete {
+  position: sticky;
+  top: 0px;
   display: flex;
-  flex-flow: column;
   justify-content: center;
   align-items: center;
-
-  img {
-    width: 200px;
-    border-radius: 100%;
-    border: 2px solid $color__background-color-primary;
-    box-shadow: 2px 2px 10px black;
-  }
+  background-color: $color__background-color-link;
   .contactLinks {
-    width: 100%;
-    height: 3rem;
-    background-color: $color__font-link;
+    display: flex;
+  }
+  .Navigation {
+    flex: 6 1 0;
+  }
+  div {
+    flex: 1 1 0;
   }
 }
