--- a/src/sass/components/LinkNav.scss
+++ b/src/sass/components/LinkNav.scss
@@ -9,19 +9,15 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 20px;
+    margin: 1rem;
     padding: 10px 50px;
     border-radius: 3px;
-    border: 1px solid $color__background-color-link;
-    background: linear-gradient(
-      to right,
-      $color__background-color-link 50%,
-      transparent 50%
-    );
+    border: 1px solid white;
+    background: linear-gradient(to right, white 50%, transparent 50%);
     background-size: 200% 100%;
     background-position: 100% 0%;
     transition: background 0.3s;
-    color: $color__font-link;
+    color: white;
     text-decoration: none;
   }
   a:hover {
