--- a/src/sass/components/Presentation.scss
+++ b/src/sass/components/Presentation.scss
@@ -5,11 +5,21 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  background-color: $color__background-color-primary-fade;
+  border-bottom: $color__background-color-primary-dark solid 2px;
 
   img {
     width: 200px;
     border-radius: 100%;
     border: 2px solid $color__background-color-primary;
     box-shadow: 2px 2px 10px black;
+  }
+
+  h5 {
+    min-width: 400px;
+    max-width: 50%;
+  }
+  * {
+    margin: 0.5rem;
   }
 }
