Ajout du telechargement CV

--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -3,7 +3,7 @@
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
-  font-family: $typo__font-family;
+  font-family: $typo__font-family-secondary;
 }
 *,
 *::after,
