--- a/src/sass/variables/_typo.scss
+++ b/src/sass/variables/_typo.scss
@@ -1,1 +1,3 @@
 $typo__font-family: Arial, Helvetica, sans-serif;
+$typo__font-family-secondary: "Trebuchet MS", "Lucida Sans Unicode",
+  "Lucida Grande", "Lucida Sans", Arial, sans-serif;
