--- a/src/sass/components/Presentation.scss
+++ b/src/sass/components/Presentation.scss
@@ -22,4 +22,29 @@
   * {
     margin: 0.5rem;
   }
+
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 1rem;
+    padding: 10px 50px;
+    border-radius: 3px;
+    border: 1px solid $color__background-color-primary-dark;
+    background: linear-gradient(
+      to right,
+      transparent 50%,
+      $color__background-color-primary-dark 50%
+    );
+    background-size: 200% 100%;
+    background-position: 100% 0%;
+    transition: 0.3s;
+    color: white;
+    text-decoration: none;
+  }
+  a:hover {
+    background-position: 0% 0%;
+    color: $color__background-color-primary-dark;
+  }
 }
