--- a/src/sass/components/Navigation.scss
+++ b/src/sass/components/Navigation.scss
@@ -1,5 +1,9 @@
 @import "../variables/colors";
-// .Navigation {
-//   border-bottom: 2px solid;
-//   border-color: black;
-// }
+.Navigation {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+  border-bottom: 2px solid;
+  border-color: black;
+}
