Ajustement des anchor links qui allaient trop loin et cachait une partie de la section voulu

--- a/src/sass/components/Main.scss
+++ b/src/sass/components/Main.scss
@@ -8,5 +8,6 @@
     background-color: $color__background-color-soustitre;
     text-align: center;
     color: white;
+    scroll-margin-top: 75px;
   }
 }
