--- a/src/sass/components/Presentation.scss
+++ b/src/sass/components/Presentation.scss
@@ -1,6 +1,7 @@
 @import "../variables/colors";
 
 .Presentation {
+  scroll-margin-top: 75px;
   display: flex;
   flex-flow: column;
   justify-content: center;
