--- a/src/sass/components/Projet.scss
+++ b/src/sass/components/Projet.scss
@@ -11,8 +11,12 @@
   );
   transition: 0.5s;
   border: $color__background-color-primary solid 1px;
-  img {
+  a img {
     width: 398px;
+    transition: 0.3s;
+  }
+  a img:hover {
+    opacity: 0.7;
   }
   .contenu {
     margin: 0.8rem;
