--- a/src/sass/components/FiltreProjets.scss
+++ b/src/sass/components/FiltreProjets.scss
@@ -2,6 +2,10 @@
 @import "../variables/typo";
 
 .FiltreProjets {
+    flex-flow: column;
+    @media screen and (min-width: 768px) {
+        flex-flow: row;
+    }
     display: flex;
     justify-content: center;
     align-items: center;
