--- a/src/sass/components/LinkProjet.scss
+++ b/src/sass/components/LinkProjet.scss
@@ -1,6 +1,7 @@
 @import "../variables/colors";
 
 .LinkProjet {
+  cursor: pointer;
   font-size: 1.1rem;
   text-align: center;
   border: 2px solid black;
