--- a/src/sass/components/Projet.scss
+++ b/src/sass/components/Projet.scss
@@ -1,15 +1,14 @@
 @import "../variables/colors";
 .Projet {
+  display: block;
   border-radius: 3px;
-  background-color: rgba(240, 240, 240, 0.308);
   box-shadow: 0px 0px 10px 2px rgba(121, 121, 121, 0.336);
   width: 400px;
   background: linear-gradient(
     3deg,
     $color__background-color-primary 6%,
-    transparent 0%
+    white 0%
   );
-  transition: 0.5s;
   border: $color__background-color-primary solid 1px;
   a img {
     width: 398px;
